fixes for analysis charts on mobile

--- a/src/_sass/tools/innovator-database/analysis.scss
+++ b/src/_sass/tools/innovator-database/analysis.scss
@@ -49,10 +49,12 @@
     }
     .ct-bar {
       stroke-width: 30px !important;
+      transform: translateX(-50px);
     }
     .ct-label {
       display: flex;
       font-size: 1.2em;
+      transform: translateX(-50px);
     }
   }
   .ct-label {
@@ -147,5 +149,29 @@
 }
 
 @media all and (max-width: $screen-xs-max) {
+  .innovatorDatabase_analysisCharts {
+    .analysisChart {
+      height: 700px;
+      .ct-chart {
+        height: 500px;
+      }
+      .key {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        text-align: left;
+        border-top: 1px solid $cream;
+        padding-top: 20px;
+        li {
+          display: block;
+        }
+      }
+    }
+    .ct-chart-bar.ct-horizontal-bars {
+      .ct-label {
+        font-size: 12px;
+      }
+    }
+  }
 
 }
